--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon"  href="src/peelimages/logo.png" />
+    <link rel="icon"  href="/peelimages/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peel Ski Club</title>
   </head>
